<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/coffee_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/coffee_name"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/coffee_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/coffee_screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="383dp"
        android:layout_height="205dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="459dp"
        app:srcCompat="@drawable/coffee_img_background" />

    <CheckBox
        android:id="@+id/coffee1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="changePrice"
        android:text="@string/coffee1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/coffee2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/coffee2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="changePrice"

        android:text="@string/coffee2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coffee1"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/coffee3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="changePrice"
        android:text="@string/coffee3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coffee2"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/coffee4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="changePrice"
        android:text="@string/coffee4"
        app:layout_constraintEnd_toStartOf="@+id/coffee5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coffee3" />

    <CheckBox
        android:id="@+id/coffee5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="changePrice"
        android:text="@string/coffee5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coffee4"
        app:layout_constraintTop_toBottomOf="@+id/coffee3" />


    <Spinner
        android:id="@+id/coffeeAmt"
        android:layout_width="100dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coffee1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/coffeeSizes"
        android:layout_marginBottom="90dp"
        android:layout_marginLeft="13dp"
        />

    <Spinner
        android:id="@+id/coffeeSizes"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coffee5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="150dp"
        android:layout_marginLeft="150dp"
        />

    <EditText
        android:id="@+id/coffeeSubtotal"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:enabled="false"
        android:focusable="false"
        android:inputType="numberDecimal"
        android:text="@string/money"
        app:layout_constraintStart_toEndOf="@+id/subtotal_text"
        app:layout_constraintTop_toBottomOf="@+id/coffeeSizes"
        app:layout_constraintBottom_toTopOf="@+id/coffeeButton"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/subtotal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:fontFamily="monospace"
        android:text="@string/subtotal"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coffee1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/coffeeSubtotal"
        android:textColor="@color/black"
        android:layout_marginTop="70dp"/>

    <Button
        android:id="@+id/coffeeButton"
        android:layout_width="375dp"
        android:layout_height="58dp"
        android:layout_marginTop="70dp"
        android:onClick="addCoffee"
        android:text="@string/submitButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coffeeSizes" />

</androidx.constraintlayout.widget.ConstraintLayout>