<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/donut_row_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/donutImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/donut_name"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/donuts" />


    <TextView
        android:id="@+id/donutName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/donut_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/donutPrice"
        app:layout_constraintStart_toEndOf="@+id/donutImage"
        app:layout_constraintTop_toTopOf="@+id/donutImage" />

    <TextView
        android:id="@+id/donutPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:text="@string/money"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/donutQuantity"
        app:layout_constraintStart_toEndOf="@+id/donutImage"
        app:layout_constraintTop_toBottomOf="@+id/donutName" />

    <Spinner
        android:id="@+id/donutQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:padding="16dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@+id/donutName"
        app:layout_constraintTop_toTopOf="@+id/donutImage" />

    <Button
        android:id="@+id/addDonut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/add_to_cart_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donutQuantity" />

</androidx.constraintlayout.widget.ConstraintLayout>
