<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/orderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/order_title"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/orderSubtotal"
        app:layout_constraintBottom_toTopOf="@+id/orders"
        app:layout_constraintEnd_toStartOf="@+id/orderImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/orderImg"
        android:layout_width="160dp"
        android:layout_height="130dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051"
        app:srcCompat="@drawable/ru_cafe_logo" />

    <ListView
        android:id="@+id/orders"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderImg"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/orderButton"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:text="@string/orderButton"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <TextView
        android:id="@+id/orderTaxText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sales Tax"
        android:textSize="20sp"

        app:layout_constraintBottom_toTopOf="@+id/orderTotalText"
        app:layout_constraintEnd_toStartOf="@+id/orderTax"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderSubtotalText" />

    <TextView
        android:id="@+id/orderTotalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Total"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/orderTaxText"
        app:layout_constraintBottom_toTopOf="@+id/orderButton"
        app:layout_constraintEnd_toStartOf="@+id/orderTotal"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/orderSubtotalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Subtotal"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/orderTaxText"
        app:layout_constraintEnd_toStartOf="@+id/orderSubtotal"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orders" />

    <EditText
        android:id="@+id/orderSubtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:focusable="false"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/money"
        app:layout_constraintBottom_toTopOf="@+id/orderTax"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orders"
        app:layout_constraintVertical_bias="0.386" />

    <EditText
        android:id="@+id/orderTax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:focusable="false"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/money"
        app:layout_constraintBottom_toTopOf="@+id/orderTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintTop_toBottomOf="@+id/orderSubtotal"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/orderTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:focusable="false"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/money"
        app:layout_constraintTop_toBottomOf="@+id/orderTax"
        app:layout_constraintBottom_toTopOf="@+id/orderButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>